# apm

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/apm/: SKILL.md
.github/workflows/: ci.yml  release.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/14-portable-setup/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-CONTEXT.md  14-DISCUSSION-LOG.md  14-VERIFICATION.md
Formula/: apm.rb
crates/apm-cli/: Cargo.toml
crates/apm-cli/src/: backup.rs  download.rs  license_cache.rs  main.rs  portable.rs  utils.rs
crates/apm-cli/src/api/: auth.rs  commerce.rs  mod.rs  storefront.rs
crates/apm-cli/src/auth/: api_keys.rs  credential.rs  device_flow.rs  mod.rs  session.rs
crates/apm-cli/src/commands/: auth.rs  bundles.rs  buy.rs  categories.rs  check.rs  cleanup.rs  compare.rs  completions.rs  config_cmd.rs  count.rs  diff.rs  doctor.rs  env_cmd.rs  explore.rs  export_cmd.rs  featured.rs  history.rs  import_cmd.rs  info.rs  install.rs  licenses.rs  list.rs  login.rs  logout.rs  mod.rs  open.rs  outdated.rs  pin.rs  random.rs  refund.rs  remove.rs  restore.rs  rollback.rs  scan.rs  search.rs  size.rs  sources.rs  stats.rs  sync_cmd.rs  tags.rs  (+4 more)
crates/apm-cli/src/install/: dmg.rs  mod.rs  pkg.rs  quarantine.rs  zip.rs
crates/apm-cli/tests/: agent_buy_tests.rs  auth_commands_tests.rs  auth_credentials_tests.rs  auth_http_tests.rs  buy_flow_tests.rs  cli_tests.rs  commerce_stubs_tests.rs  config_tests.rs  discovery_commands_tests.rs  license_cache_tests.rs  license_management_commands_tests.rs  offline_install_test.rs  refund_flow_tests.rs  registry_tests.rs  scanner_tests.rs  state_tests.rs
crates/apm-cli/tests/fixtures/plugins/: test-reverb.toml  test-synth.toml
crates/apm-cli/tests/support/: mod.rs
crates/apm-core/: Cargo.toml
crates/apm-core/src/: bundle_id_store.rs  config.rs  error.rs  lib.rs  license.rs  state.rs
crates/apm-core/src/registry/: installers.rs  matcher.rs  mod.rs  search.rs  sync.rs  types.rs
crates/apm-server/: Cargo.toml  build.rs
crates/apm-server/src/: db.rs  lib.rs  license.rs  main.rs  stripe.rs
crates/apm-server/src/auth/: api_keys.rs  device_flow.rs  jwt.rs  mod.rs  password.rs
crates/apm-server/src/routes/: auth.rs  bundle_ids.rs  commerce.rs  health.rs  mod.rs
crates/apm-server/tests/: agent_policy_tests.rs  auth_routes_tests.rs  commerce_routes_tests.rs  discovery_routes_tests.rs  license_routes_tests.rs
data/: msd-catalog.json  pb-catalog.json
data/registry/: bundle_ids.toml  index.toml
data/registry/plugins/: 100-acid-vol-1.toml  100-acid-vol-2.toml  100-years-of-beyerdynamic-ir-pack.toml  102200.toml  10db-bundle.toml  10db-compressor-v2.toml  10db-compressor.toml  10db-eq.toml  1178.toml  (+7979 more)
docs/: registry-architecture.md
migrations/: 20260331000000_initial.sql  20260401090000_authentication.sql  20260401100000_purchasing.sql  20260402000000_licenses.sql  20260402010000_discovery_storefront.sql  20260402020000_agent_purchase_policies.sql  20260404120000_checkout_url_and_sanitized_errors.sql  20260410000000_bundle_id_submissions.sql
registry/: index.toml  installers.toml
registry-src/: manifest.toml
registry-src/bundles/: free-synths.toml  mixing-basics.toml  producer-essentials.toml
registry-src/installers/: arturia-software-center.toml  ilok-license-manager.toml  izotope-product-portal.toml  native-access.toml  plugin-alliance-installation-manager.toml  roland-cloud.toml  softube-central.toml  spitfire-audio.toml  toontrack-product-manager.toml  ua-connect.toml  waves-central.toml
registry-src/vendors/: aberrant-dsp.toml  ableton.toml  accusonus.toml  ace-studio.toml  acon-digital.toml  acustica-audio.toml  aegean-music.toml  alex-hilton-a1audio.toml  analog-obsession.toml  antares-audio-technologies.toml  apple.toml  ardour-community.toml  ardura.toml  arturia.toml  auburn-sounds.toml  audacity-team.toml  audio-damage.toml  audiothing.toml  avid.toml  baby-audio.toml  bertom-audio.toml  bitwig.toml  black-rooster-audio.toml  blue-cat-audio.toml  brainworx-plugin-alliance.toml  brainworx.toml  cableguys.toml  caelum-audio.toml  celemony.toml  cherry-audio.toml  chowdhury-dsp.toml  chris-johnson-airwindows.toml  cockos.toml  daichi-laboratory.toml  dawesome-tracktion.toml  ddmf.toml  decomposer.toml  denis-tihanov.toml  denise-audio.toml  devious-machines.toml  (+87 more)
registry/bundles/: free-synths.toml  mixing-basics.toml  producer-essentials.toml
registry/plugins/: a1stereocontrol.toml  ableton-live.toml  ace-bridge.toml  acon-digital-multiply.toml  actuate.toml  aegean-music-doppler-dome.toml  airwindows-consolidated.toml  amek-eq-200.toml  amplitube.toml  ana2.toml  analog-lab-intro.toml  analog-lab.toml  analog-obsession-dbcomp.toml  analog-obsession-rare.toml  analog-obsession-tupre.toml  antares-auto-tune-pro-x.toml  arturia-bus-force.toml  arturia-chorus-dimension-d.toml  arturia-chorus-jun-6.toml  arturia-comp-fet-76.toml  arturia-comp-vca-65.toml  arturia-delay-tape-201.toml  arturia-dist-coldfire.toml  arturia-dist-opamp-21.toml  arturia-filter-mini.toml  arturia-flanger-bl-20.toml  arturia-mellotron-v.toml  arturia-mini-v.toml  arturia-phaser-bi-tron.toml  arturia-pre-v76.toml  arturia-prophet-v.toml  arturia-rev-intensity.toml  arturia-rev-plate-140.toml  arturia-tape-mello-fi.toml  arturia-wurli-v.toml  audacity.toml  audiodamage-discord3.toml  baby-audio-crystalline.toml  baby-audio-super-vhs.toml  battery.toml  (+384 more)
scripts/: apply-enrichment.py  build-registry.py  enrich-registry.py  generate-registry.py  learn-bundle-ids.py  migrate-registry-to-source.py  scrape-catalog.py  scrape-pluginboutique.py
src/: backup.rs  config.rs  download.rs  error.rs  main.rs  scanner.rs  state.rs
src/commands/: cleanup.rs  completions.rs  export_cmd.rs  info.rs  install.rs  list.rs  mod.rs  outdated.rs  pin.rs  remove.rs  rollback.rs  scan.rs  search.rs  sources.rs  sync_cmd.rs  upgrade.rs
src/install/: dmg.rs  mod.rs
src/registry/: mod.rs  search.rs  types.rs
tests/: cli_tests.rs  config_tests.rs  registry_tests.rs  scanner_tests.rs  state_tests.rs
(+9093 files in other folders)
