[workspace]
resolver = "2"
members = [
    "crates/apm-core",
    "crates/apm-cli",
    "crates/apm-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/apm-pm/apm"

[workspace.dependencies]
# Shared across multiple crates -- define once, inherit everywhere
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# default-features = false avoids the `time` crate dependency that requires
# Cargo edition2024 on Rust 1.84; "std" + "serde" + "clock" is sufficient.
chrono = { version = "0.4", features = ["std", "serde", "clock"], default-features = false }

# apm-core is a workspace dep so both apm-cli and apm-server can reference it
apm-core = { path = "crates/apm-core" }
