[package]
name = "apm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = "1"
dirs = "6"
walkdir = "2"
# plist: disable default features (no `enable_unstable_features_that_may_break_with_minor_version_bumps`)
plist = { version = "1", default-features = false }
git2 = "0.19"
