[package]
name = "apm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable the From<reqwest::Error> impl for ApmError. CLI crates that
# use reqwest should enable this feature.
reqwest = ["dep:reqwest"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = "1"
dirs = "6"
walkdir = "2"
# plist: disable default features (no `enable_unstable_features_that_may_break_with_minor_version_bumps`)
plist = { version = "1", default-features = false }
git2 = { version = "0.19", features = ["vendored-openssl"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4"
# Optional: only pulled in when the "reqwest" feature is enabled
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false, optional = true }
