[package]
name = "apm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable the From<reqwest::Error> impl for ApmError. CLI crates that
# use reqwest should enable this feature.
reqwest = ["dep:reqwest"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = "1"
dirs = "6"
walkdir = "2"
# plist: disable default features (no `enable_unstable_features_that_may_break_with_minor_version_bumps`)
plist = { version = "1", default-features = false }
# Optional: only pulled in when the "reqwest" feature is enabled
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false, optional = true }

[dev-dependencies]
# Pin tempfile to < 3.15 to avoid getrandom 0.4.x which requires Cargo
# edition2024 (not available on Rust 1.84).
tempfile = ">=3, <3.15"
