[package]
name = "apm-server"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "apm-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "=0.8.1"
apm-core = { workspace = true }
argon2 = "0.5"
async-stripe = { version = "0.41.0", default-features = false, features = ["runtime-tokio-hyper-rustls"] }
base64 = "0.22"
chrono = { workspace = true }
dotenvy = "0.15"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { version = "=0.8.2", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "=1.20.0", features = ["v4", "v7"] }

[dev-dependencies]
http-body-util = "0.1"
