[package]
name = "apm-server"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "apm-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "=0.8.1"
dotenvy = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "=0.8.2", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
